--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,8 @@ jobs:
     - name: Build with Gradle Wrapper
       run: ./gradlew build
 
+    - name: List files to debug
+      run: ls -R build/libs
       
     - name: Build And Push Docker Image
       uses: mr-smithers-excellent/docker-build-push@v6
